--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@yazanaabed/react-tabs": "^2.3.6",
     "aphrodite": "^2.3.1",
     "bootstrap": "^4.3.1",
     "history": "^4.7.2",
+    "install": "^0.12.2",
+    "npm": "^6.9.0",
     "react": "^16.8.4",
+    "react-bootstrap": "^1.0.0-beta.8",
+    "react-cool-tabs": "^1.1.6",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^3.0.1",
     "react-spinners": "^0.5.3",
+    "react-tabs-redux": "^4.0.0",
+    "react-web-tabs": "^1.0.1",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
