--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^1.0.0-beta.8",
     "react-cool-tabs": "^1.1.6",
     "react-dom": "^16.8.4",
+    "react-loading-overlay": "^1.0.1",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.1",
