--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "tableau-api": "^2.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
