Properly handle incorrect subdomain access

--- a/client/default.conf
+++ b/client/default.conf
@@ -9,6 +9,11 @@ server {
     listen       443 ssl;
     ssl_certificate /etc/letsencrypt/live/infonexus.me/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/infonexus.me/privkey.pem;
+    location / {
+        if (!-e $request_filename) {
+            rewrite ^(.*)$ /index.html break;
+        }
+    }
 
     # ...rest of default configuration...
 }
